# app/Models/Area.php
@@ -16,6 +16,7 @@ use Illuminate\Database\Eloquent\Model;
  *     @OA\Property(property="type", type="array", @OA\Items(type="string"), description="Tipos da área"),
  *     @OA\Property(property="b_menu", type="boolean", description="Se aparece no menu"),
  *     @OA\Property(property="int_rolePermission", type="integer", description="Permissão de role"),
+ *     @OA\Property(property="bool_Enabled", type="boolean", description="Se a área está habilitada"),
  *     @OA\Property(property="created_at", type="string", format="date-time", description="Data de criação"),
  *     @OA\Property(property="updated_at", type="string", format="date-time", description="Data de atualização")
  * )
@@ -30,7 +31,8 @@ class Area extends Model
         'vchr_Tag',
         'type',
         'b_menu',
-        'int_rolePermission'
+        'int_rolePermission',
+        'bool_Enabled'
     ];
 
     public function Materia(){
